fixing contrast color error

--- a/styles/base.css
+++ b/styles/base.css
@@ -203,4 +203,5 @@ footer p {
     font-size: 3rem;
     cursor: pointer;
     font-size: 2rem;
+    color: white;
 }
